--- a/HydrosoftBotDriver.ioc
+++ b/HydrosoftBotDriver.ioc
@@ -3,6 +3,17 @@ CAN.CalculateBaudRate=666666
 CAN.CalculateTimeBit=1500.00
 CAN.CalculateTimeQuantum=500.0
 CAN.IPParameters=CalculateTimeQuantum,CalculateTimeBit,CalculateBaudRate
+Dma.I2C2_RX.0.Direction=DMA_PERIPH_TO_MEMORY
+Dma.I2C2_RX.0.Instance=DMA1_Channel5
+Dma.I2C2_RX.0.MemDataAlignment=DMA_MDATAALIGN_BYTE
+Dma.I2C2_RX.0.MemInc=DMA_MINC_ENABLE
+Dma.I2C2_RX.0.Mode=DMA_NORMAL
+Dma.I2C2_RX.0.PeriphDataAlignment=DMA_PDATAALIGN_BYTE
+Dma.I2C2_RX.0.PeriphInc=DMA_PINC_DISABLE
+Dma.I2C2_RX.0.Priority=DMA_PRIORITY_LOW
+Dma.I2C2_RX.0.RequestParameters=Instance,Direction,PeriphInc,MemInc,PeriphDataAlignment,MemDataAlignment,Mode,Priority
+Dma.Request0=I2C2_RX
+Dma.RequestsNb=1
 FREERTOS.FootprintOK=true
 FREERTOS.INCLUDE_vTaskDelayUntil=1
 FREERTOS.IPParameters=Tasks01,MEMORY_ALLOCATION,FootprintOK,INCLUDE_vTaskDelayUntil,configUSE_NEWLIB_REENTRANT
@@ -14,33 +25,39 @@ KeepUserPlacement=false
 Mcu.Family=STM32F1
 Mcu.IP0=CAN
 Mcu.IP1=CRC
-Mcu.IP2=FREERTOS
-Mcu.IP3=I2C1
-Mcu.IP4=NVIC
-Mcu.IP5=RCC
-Mcu.IP6=SYS
-Mcu.IP7=USART1
-Mcu.IPNb=8
+Mcu.IP2=DMA
+Mcu.IP3=FREERTOS
+Mcu.IP4=I2C2
+Mcu.IP5=NVIC
+Mcu.IP6=RCC
+Mcu.IP7=SYS
+Mcu.IP8=TIM2
+Mcu.IP9=USART1
+Mcu.IPNb=10
 Mcu.Name=STM32F103C(8-B)Tx
 Mcu.Package=LQFP48
-Mcu.Pin0=PA9
-Mcu.Pin1=PA10
-Mcu.Pin10=VP_SYS_VS_tim1
-Mcu.Pin2=PA11
-Mcu.Pin3=PA12
-Mcu.Pin4=PA13
-Mcu.Pin5=PA14
-Mcu.Pin6=PB6
-Mcu.Pin7=PB7
-Mcu.Pin8=VP_CRC_VS_CRC
-Mcu.Pin9=VP_FREERTOS_VS_CMSIS_V1
-Mcu.PinsNb=11
+Mcu.Pin0=PB10
+Mcu.Pin1=PB11
+Mcu.Pin10=VP_CRC_VS_CRC
+Mcu.Pin11=VP_FREERTOS_VS_CMSIS_V1
+Mcu.Pin12=VP_SYS_VS_tim1
+Mcu.Pin13=VP_TIM2_VS_ClockSourceINT
+Mcu.Pin2=PB13
+Mcu.Pin3=PA9
+Mcu.Pin4=PA10
+Mcu.Pin5=PA11
+Mcu.Pin6=PA12
+Mcu.Pin7=PA13
+Mcu.Pin8=PA14
+Mcu.Pin9=PA15
+Mcu.PinsNb=14
 Mcu.ThirdPartyNb=0
 Mcu.UserConstants=
 Mcu.UserName=STM32F103CBTx
 MxCube.Version=6.3.0
 MxDb.Version=DB.6.0.30
 NVIC.BusFault_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:false
+NVIC.DMA1_Channel5_IRQn=true\:5\:0\:false\:false\:true\:true\:false\:true
 NVIC.DebugMonitor_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:false
 NVIC.ForceEnableDMAVector=true
 NVIC.HardFault_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:false
@@ -67,12 +84,16 @@ PA13.Mode=Serial_Wire
 PA13.Signal=SYS_JTMS-SWDIO
 PA14.Mode=Serial_Wire
 PA14.Signal=SYS_JTCK-SWCLK
+PA15.Locked=true
+PA15.Signal=GPXTI15
 PA9.Mode=Asynchronous
 PA9.Signal=USART1_TX
-PB6.Mode=I2C
-PB6.Signal=I2C1_SCL
-PB7.Mode=I2C
-PB7.Signal=I2C1_SDA
+PB10.Mode=I2C
+PB10.Signal=I2C2_SCL
+PB11.Mode=I2C
+PB11.Signal=I2C2_SDA
+PB13.Locked=true
+PB13.Signal=GPIO_Output
 PinOutPanel.RotationAngle=0
 ProjectManager.AskForMigrate=true
 ProjectManager.BackupPrevious=false
@@ -101,7 +122,7 @@ ProjectManager.StackSize=0x400
 ProjectManager.TargetToolchain=STM32CubeIDE
 ProjectManager.ToolChainLocation=
 ProjectManager.UnderRoot=true
-ProjectManager.functionlistsort=1-SystemClock_Config-RCC-false-HAL-false,2-MX_GPIO_Init-GPIO-false-HAL-true,3-MX_CAN_Init-CAN-false-HAL-true,4-MX_CRC_Init-CRC-false-HAL-true,5-MX_I2C1_Init-I2C1-false-HAL-true,6-MX_USART1_UART_Init-USART1-false-HAL-true
+ProjectManager.functionlistsort=1-SystemClock_Config-RCC-false-HAL-false,2-MX_GPIO_Init-GPIO-false-HAL-true,3-MX_CAN_Init-CAN-false-HAL-true,4-MX_CRC_Init-CRC-false-HAL-true,5-MX_DMA_Init-DMA-false-HAL-true,6-MX_I2C2_Init-I2C2-false-HAL-true,7-MX_TIM2_Init-TIM2-false-HAL-true,8-MX_USART1_UART_Init-USART1-false-HAL-true
 RCC.ADCFreqValue=32000000
 RCC.AHBFreq_Value=64000000
 RCC.APB1CLKDivider=RCC_HCLK_DIV2
@@ -121,6 +142,8 @@ RCC.SYSCLKFreq_VALUE=64000000
 RCC.SYSCLKSource=RCC_SYSCLKSOURCE_PLLCLK
 RCC.TimSysFreq_Value=64000000
 RCC.USBFreq_Value=64000000
+SH.GPXTI15.0=GPIO_EXTI15
+SH.GPXTI15.ConfNb=1
 USART1.IPParameters=VirtualMode
 USART1.VirtualMode=VM_ASYNC
 VP_CRC_VS_CRC.Mode=CRC_Activate
@@ -129,5 +152,7 @@ VP_FREERTOS_VS_CMSIS_V1.Mode=CMSIS_V1
 VP_FREERTOS_VS_CMSIS_V1.Signal=FREERTOS_VS_CMSIS_V1
 VP_SYS_VS_tim1.Mode=TIM1
 VP_SYS_VS_tim1.Signal=SYS_VS_tim1
+VP_TIM2_VS_ClockSourceINT.Mode=Internal
+VP_TIM2_VS_ClockSourceINT.Signal=TIM2_VS_ClockSourceINT
 board=custom
 isbadioc=false
