--- a/HydrosoftBotDriver.ioc
+++ b/HydrosoftBotDriver.ioc
@@ -3,17 +3,27 @@ CAN.CalculateBaudRate=666666
 CAN.CalculateTimeBit=1500.00
 CAN.CalculateTimeQuantum=500.0
 CAN.IPParameters=CalculateTimeQuantum,CalculateTimeBit,CalculateBaudRate
-Dma.I2C2_RX.0.Direction=DMA_PERIPH_TO_MEMORY
-Dma.I2C2_RX.0.Instance=DMA1_Channel5
-Dma.I2C2_RX.0.MemDataAlignment=DMA_MDATAALIGN_BYTE
-Dma.I2C2_RX.0.MemInc=DMA_MINC_ENABLE
-Dma.I2C2_RX.0.Mode=DMA_NORMAL
-Dma.I2C2_RX.0.PeriphDataAlignment=DMA_PDATAALIGN_BYTE
-Dma.I2C2_RX.0.PeriphInc=DMA_PINC_DISABLE
-Dma.I2C2_RX.0.Priority=DMA_PRIORITY_LOW
-Dma.I2C2_RX.0.RequestParameters=Instance,Direction,PeriphInc,MemInc,PeriphDataAlignment,MemDataAlignment,Mode,Priority
-Dma.Request0=I2C2_RX
-Dma.RequestsNb=1
+Dma.Request0=USART1_RX
+Dma.Request1=USART1_TX
+Dma.RequestsNb=2
+Dma.USART1_RX.0.Direction=DMA_PERIPH_TO_MEMORY
+Dma.USART1_RX.0.Instance=DMA1_Channel5
+Dma.USART1_RX.0.MemDataAlignment=DMA_MDATAALIGN_BYTE
+Dma.USART1_RX.0.MemInc=DMA_MINC_ENABLE
+Dma.USART1_RX.0.Mode=DMA_NORMAL
+Dma.USART1_RX.0.PeriphDataAlignment=DMA_PDATAALIGN_BYTE
+Dma.USART1_RX.0.PeriphInc=DMA_PINC_DISABLE
+Dma.USART1_RX.0.Priority=DMA_PRIORITY_MEDIUM
+Dma.USART1_RX.0.RequestParameters=Instance,Direction,PeriphInc,MemInc,PeriphDataAlignment,MemDataAlignment,Mode,Priority
+Dma.USART1_TX.1.Direction=DMA_MEMORY_TO_PERIPH
+Dma.USART1_TX.1.Instance=DMA1_Channel4
+Dma.USART1_TX.1.MemDataAlignment=DMA_MDATAALIGN_BYTE
+Dma.USART1_TX.1.MemInc=DMA_MINC_ENABLE
+Dma.USART1_TX.1.Mode=DMA_NORMAL
+Dma.USART1_TX.1.PeriphDataAlignment=DMA_PDATAALIGN_BYTE
+Dma.USART1_TX.1.PeriphInc=DMA_PINC_DISABLE
+Dma.USART1_TX.1.Priority=DMA_PRIORITY_MEDIUM
+Dma.USART1_TX.1.RequestParameters=Instance,Direction,PeriphInc,MemInc,PeriphDataAlignment,MemDataAlignment,Mode,Priority
 FREERTOS.FootprintOK=true
 FREERTOS.INCLUDE_vTaskDelayUntil=1
 FREERTOS.IPParameters=Tasks01,MEMORY_ALLOCATION,FootprintOK,INCLUDE_vTaskDelayUntil,configUSE_NEWLIB_REENTRANT
@@ -57,6 +67,7 @@ Mcu.UserName=STM32F103CBTx
 MxCube.Version=6.3.0
 MxDb.Version=DB.6.0.30
 NVIC.BusFault_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:false
+NVIC.DMA1_Channel4_IRQn=true\:5\:0\:false\:false\:true\:true\:false\:true
 NVIC.DMA1_Channel5_IRQn=true\:5\:0\:false\:false\:true\:true\:false\:true
 NVIC.DebugMonitor_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:false
 NVIC.ForceEnableDMAVector=true
@@ -122,7 +133,7 @@ ProjectManager.StackSize=0x400
 ProjectManager.TargetToolchain=STM32CubeIDE
 ProjectManager.ToolChainLocation=
 ProjectManager.UnderRoot=true
-ProjectManager.functionlistsort=1-SystemClock_Config-RCC-false-HAL-false,2-MX_GPIO_Init-GPIO-false-HAL-true,3-MX_CAN_Init-CAN-false-HAL-true,4-MX_CRC_Init-CRC-false-HAL-true,5-MX_DMA_Init-DMA-false-HAL-true,6-MX_I2C2_Init-I2C2-false-HAL-true,7-MX_TIM2_Init-TIM2-false-HAL-true,8-MX_USART1_UART_Init-USART1-false-HAL-true
+ProjectManager.functionlistsort=1-SystemClock_Config-RCC-false-HAL-false,2-MX_GPIO_Init-GPIO-false-HAL-true,3-MX_CAN_Init-CAN-false-HAL-true,4-MX_CRC_Init-CRC-false-HAL-true,5-MX_I2C2_Init-I2C2-false-HAL-true,6-MX_TIM2_Init-TIM2-false-HAL-true,7-MX_DMA_Init-DMA-false-HAL-true,8-MX_USART1_UART_Init-USART1-false-HAL-true
 RCC.ADCFreqValue=32000000
 RCC.AHBFreq_Value=64000000
 RCC.APB1CLKDivider=RCC_HCLK_DIV2
