--- a/HydrosoftBotDriver.ioc
+++ b/HydrosoftBotDriver.ioc
@@ -1,7 +1,7 @@
 #MicroXplorer Configuration settings - do not modify
-CAN.CalculateBaudRate=666666
-CAN.CalculateTimeBit=1500.00
-CAN.CalculateTimeQuantum=500.0
+CAN.CalculateBaudRate=750000
+CAN.CalculateTimeBit=1333.33
+CAN.CalculateTimeQuantum=444.44444444444446
 CAN.IPParameters=CalculateTimeQuantum,CalculateTimeBit,CalculateBaudRate
 Dma.Request0=USART1_RX
 Dma.Request1=USART1_TX
@@ -31,6 +31,7 @@ FREERTOS.MEMORY_ALLOCATION=1
 FREERTOS.Tasks01=sensorTask,2,1024,sensorTaskFunc,Default,NULL,Static,sensorTaskBuffer,sensorTaskControlBlock;communicationTa,1,1024,communicationTaskFunc,Default,NULL,Static,communicationTaskBuffer,communicationTaskControlBlock
 FREERTOS.configUSE_NEWLIB_REENTRANT=1
 File.Version=6
+GPIO.groupedBy=Group By Peripherals
 KeepUserPlacement=false
 Mcu.Family=STM32F1
 Mcu.IP0=CAN
@@ -46,21 +47,24 @@ Mcu.IP9=USART1
 Mcu.IPNb=10
 Mcu.Name=STM32F103C(8-B)Tx
 Mcu.Package=LQFP48
-Mcu.Pin0=PB10
-Mcu.Pin1=PB11
-Mcu.Pin10=VP_CRC_VS_CRC
-Mcu.Pin11=VP_FREERTOS_VS_CMSIS_V1
-Mcu.Pin12=VP_SYS_VS_tim1
-Mcu.Pin13=VP_TIM2_VS_ClockSourceINT
-Mcu.Pin2=PB13
-Mcu.Pin3=PA9
-Mcu.Pin4=PA10
-Mcu.Pin5=PA11
-Mcu.Pin6=PA12
-Mcu.Pin7=PA13
-Mcu.Pin8=PA14
-Mcu.Pin9=PA15
-Mcu.PinsNb=14
+Mcu.Pin0=PC15-OSC32_OUT
+Mcu.Pin1=PD0-OSC_IN
+Mcu.Pin10=PA13
+Mcu.Pin11=PA14
+Mcu.Pin12=PA15
+Mcu.Pin13=VP_CRC_VS_CRC
+Mcu.Pin14=VP_FREERTOS_VS_CMSIS_V1
+Mcu.Pin15=VP_SYS_VS_tim1
+Mcu.Pin16=VP_TIM2_VS_ClockSourceINT
+Mcu.Pin2=PD1-OSC_OUT
+Mcu.Pin3=PB10
+Mcu.Pin4=PB11
+Mcu.Pin5=PB13
+Mcu.Pin6=PA9
+Mcu.Pin7=PA10
+Mcu.Pin8=PA11
+Mcu.Pin9=PA12
+Mcu.PinsNb=17
 Mcu.ThirdPartyNb=0
 Mcu.UserConstants=
 Mcu.UserName=STM32F103CBTx
@@ -70,8 +74,10 @@ NVIC.BusFault_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:false
 NVIC.DMA1_Channel4_IRQn=true\:5\:0\:false\:false\:true\:true\:false\:true
 NVIC.DMA1_Channel5_IRQn=true\:5\:0\:false\:false\:true\:true\:false\:true
 NVIC.DebugMonitor_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:false
+NVIC.EXTI15_10_IRQn=true\:5\:0\:false\:false\:true\:true\:true\:true
 NVIC.ForceEnableDMAVector=true
 NVIC.HardFault_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:false
+NVIC.I2C2_EV_IRQn=true\:5\:0\:false\:false\:true\:true\:true\:true
 NVIC.MemoryManagement_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:false
 NVIC.NonMaskableInt_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:false
 NVIC.PendSV_IRQn=true\:15\:0\:false\:false\:false\:true\:false\:false
@@ -96,6 +102,9 @@ PA13.Mode=Serial_Wire
 PA13.Signal=SYS_JTMS-SWDIO
 PA14.Mode=Serial_Wire
 PA14.Signal=SYS_JTCK-SWCLK
+PA15.GPIOParameters=GPIO_PuPd,GPIO_ModeDefaultEXTI
+PA15.GPIO_ModeDefaultEXTI=GPIO_MODE_IT_RISING_FALLING
+PA15.GPIO_PuPd=GPIO_NOPULL
 PA15.Locked=true
 PA15.Signal=GPXTI15
 PA9.Mode=Asynchronous
@@ -106,6 +115,12 @@ PB11.Mode=I2C
 PB11.Signal=I2C2_SDA
 PB13.Locked=true
 PB13.Signal=GPIO_Output
+PC15-OSC32_OUT.Locked=true
+PC15-OSC32_OUT.Signal=GPIO_Output
+PD0-OSC_IN.Mode=HSE-External-Oscillator
+PD0-OSC_IN.Signal=RCC_OSC_IN
+PD1-OSC_OUT.Mode=HSE-External-Oscillator
+PD1-OSC_OUT.Signal=RCC_OSC_OUT
 PinOutPanel.RotationAngle=0
 ProjectManager.AskForMigrate=true
 ProjectManager.BackupPrevious=false
@@ -135,25 +150,27 @@ ProjectManager.TargetToolchain=STM32CubeIDE
 ProjectManager.ToolChainLocation=
 ProjectManager.UnderRoot=true
 ProjectManager.functionlistsort=1-SystemClock_Config-RCC-false-HAL-false,2-MX_GPIO_Init-GPIO-false-HAL-true,3-MX_CAN_Init-CAN-false-HAL-true,4-MX_CRC_Init-CRC-false-HAL-true,5-MX_I2C2_Init-I2C2-false-HAL-true,6-MX_TIM2_Init-TIM2-false-HAL-true,7-MX_DMA_Init-DMA-false-HAL-true,8-MX_USART1_UART_Init-USART1-false-HAL-true
-RCC.ADCFreqValue=32000000
-RCC.AHBFreq_Value=64000000
+RCC.ADCFreqValue=36000000
+RCC.AHBFreq_Value=72000000
 RCC.APB1CLKDivider=RCC_HCLK_DIV2
-RCC.APB1Freq_Value=32000000
-RCC.APB1TimFreq_Value=64000000
-RCC.APB2Freq_Value=64000000
-RCC.APB2TimFreq_Value=64000000
-RCC.FCLKCortexFreq_Value=64000000
+RCC.APB1Freq_Value=36000000
+RCC.APB1TimFreq_Value=72000000
+RCC.APB2Freq_Value=72000000
+RCC.APB2TimFreq_Value=72000000
+RCC.FCLKCortexFreq_Value=72000000
 RCC.FamilyName=M
-RCC.HCLKFreq_Value=64000000
-RCC.IPParameters=ADCFreqValue,AHBFreq_Value,APB1CLKDivider,APB1Freq_Value,APB1TimFreq_Value,APB2Freq_Value,APB2TimFreq_Value,FCLKCortexFreq_Value,FamilyName,HCLKFreq_Value,MCOFreq_Value,PLLCLKFreq_Value,PLLMCOFreq_Value,PLLMUL,SYSCLKFreq_VALUE,SYSCLKSource,TimSysFreq_Value,USBFreq_Value
-RCC.MCOFreq_Value=64000000
-RCC.PLLCLKFreq_Value=64000000
-RCC.PLLMCOFreq_Value=32000000
-RCC.PLLMUL=RCC_PLL_MUL16
-RCC.SYSCLKFreq_VALUE=64000000
+RCC.HCLKFreq_Value=72000000
+RCC.IPParameters=ADCFreqValue,AHBFreq_Value,APB1CLKDivider,APB1Freq_Value,APB1TimFreq_Value,APB2Freq_Value,APB2TimFreq_Value,FCLKCortexFreq_Value,FamilyName,HCLKFreq_Value,MCOFreq_Value,PLLCLKFreq_Value,PLLMCOFreq_Value,PLLMUL,PLLSourceVirtual,SYSCLKFreq_VALUE,SYSCLKSource,TimSysFreq_Value,USBFreq_Value,VCOOutput2Freq_Value
+RCC.MCOFreq_Value=72000000
+RCC.PLLCLKFreq_Value=72000000
+RCC.PLLMCOFreq_Value=36000000
+RCC.PLLMUL=RCC_PLL_MUL9
+RCC.PLLSourceVirtual=RCC_PLLSOURCE_HSE
+RCC.SYSCLKFreq_VALUE=72000000
 RCC.SYSCLKSource=RCC_SYSCLKSOURCE_PLLCLK
-RCC.TimSysFreq_Value=64000000
-RCC.USBFreq_Value=64000000
+RCC.TimSysFreq_Value=72000000
+RCC.USBFreq_Value=72000000
+RCC.VCOOutput2Freq_Value=8000000
 SH.GPXTI15.0=GPIO_EXTI15
 SH.GPXTI15.ConfNb=1
 USART1.IPParameters=VirtualMode
@@ -167,3 +184,4 @@ VP_SYS_VS_tim1.Signal=SYS_VS_tim1
 VP_TIM2_VS_ClockSourceINT.Mode=Internal
 VP_TIM2_VS_ClockSourceINT.Signal=TIM2_VS_ClockSourceINT
 board=custom
+isbadioc=false
