--- a/HydrosoftBotDriver.ioc
+++ b/HydrosoftBotDriver.ioc
@@ -32,6 +32,8 @@ FREERTOS.Tasks01=sensorTask,2,1024,sensorTaskFunc,Default,NULL,Static,sensorTask
 FREERTOS.configUSE_NEWLIB_REENTRANT=1
 File.Version=6
 GPIO.groupedBy=Group By Peripherals
+I2C2.I2C_Mode=I2C_Fast
+I2C2.IPParameters=I2C_Mode
 KeepUserPlacement=false
 Mcu.Family=STM32F1
 Mcu.IP0=CAN
@@ -47,24 +49,22 @@ Mcu.IP9=USART1
 Mcu.IPNb=10
 Mcu.Name=STM32F103C(8-B)Tx
 Mcu.Package=LQFP48
-Mcu.Pin0=PC15-OSC32_OUT
-Mcu.Pin1=PD0-OSC_IN
-Mcu.Pin10=PA13
-Mcu.Pin11=PA14
-Mcu.Pin12=PA15
-Mcu.Pin13=VP_CRC_VS_CRC
-Mcu.Pin14=VP_FREERTOS_VS_CMSIS_V1
-Mcu.Pin15=VP_SYS_VS_tim1
-Mcu.Pin16=VP_TIM2_VS_ClockSourceINT
-Mcu.Pin2=PD1-OSC_OUT
-Mcu.Pin3=PB10
-Mcu.Pin4=PB11
-Mcu.Pin5=PB13
-Mcu.Pin6=PA9
-Mcu.Pin7=PA10
-Mcu.Pin8=PA11
-Mcu.Pin9=PA12
-Mcu.PinsNb=17
+Mcu.Pin0=PD0-OSC_IN
+Mcu.Pin1=PD1-OSC_OUT
+Mcu.Pin10=PA15
+Mcu.Pin11=VP_CRC_VS_CRC
+Mcu.Pin12=VP_FREERTOS_VS_CMSIS_V1
+Mcu.Pin13=VP_SYS_VS_tim1
+Mcu.Pin14=VP_TIM2_VS_ClockSourceINT
+Mcu.Pin2=PB10
+Mcu.Pin3=PB11
+Mcu.Pin4=PA9
+Mcu.Pin5=PA10
+Mcu.Pin6=PA11
+Mcu.Pin7=PA12
+Mcu.Pin8=PA13
+Mcu.Pin9=PA14
+Mcu.PinsNb=15
 Mcu.ThirdPartyNb=0
 Mcu.UserConstants=
 Mcu.UserName=STM32F103CBTx
@@ -77,7 +77,6 @@ NVIC.DebugMonitor_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:false
 NVIC.EXTI15_10_IRQn=true\:5\:0\:false\:false\:true\:true\:true\:true
 NVIC.ForceEnableDMAVector=true
 NVIC.HardFault_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:false
-NVIC.I2C2_EV_IRQn=true\:5\:0\:false\:false\:true\:true\:true\:true
 NVIC.MemoryManagement_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:false
 NVIC.NonMaskableInt_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:false
 NVIC.PendSV_IRQn=true\:15\:0\:false\:false\:false\:true\:false\:false
@@ -102,8 +101,9 @@ PA13.Mode=Serial_Wire
 PA13.Signal=SYS_JTMS-SWDIO
 PA14.Mode=Serial_Wire
 PA14.Signal=SYS_JTCK-SWCLK
-PA15.GPIOParameters=GPIO_ModeDefaultEXTI
+PA15.GPIOParameters=GPIO_PuPd,GPIO_ModeDefaultEXTI
 PA15.GPIO_ModeDefaultEXTI=GPIO_MODE_IT_FALLING
+PA15.GPIO_PuPd=GPIO_PULLUP
 PA15.Signal=GPXTI15
 PA9.Mode=Asynchronous
 PA9.Signal=USART1_TX
@@ -111,10 +111,6 @@ PB10.Mode=I2C
 PB10.Signal=I2C2_SCL
 PB11.Mode=I2C
 PB11.Signal=I2C2_SDA
-PB13.Locked=true
-PB13.Signal=GPIO_Output
-PC15-OSC32_OUT.Locked=true
-PC15-OSC32_OUT.Signal=GPIO_Output
 PD0-OSC_IN.Mode=HSE-External-Oscillator
 PD0-OSC_IN.Signal=RCC_OSC_IN
 PD1-OSC_OUT.Mode=HSE-External-Oscillator
