rosserial com lost sync

--- a/HydrosoftBotDriver.ioc
+++ b/HydrosoftBotDriver.ioc
@@ -51,10 +51,11 @@ Mcu.Name=STM32F103C(8-B)Tx
 Mcu.Package=LQFP48
 Mcu.Pin0=PD0-OSC_IN
 Mcu.Pin1=PD1-OSC_OUT
-Mcu.Pin10=VP_CRC_VS_CRC
-Mcu.Pin11=VP_FREERTOS_VS_CMSIS_V1
-Mcu.Pin12=VP_SYS_VS_tim1
-Mcu.Pin13=VP_TIM2_VS_ClockSourceINT
+Mcu.Pin10=PA15
+Mcu.Pin11=VP_CRC_VS_CRC
+Mcu.Pin12=VP_FREERTOS_VS_CMSIS_V1
+Mcu.Pin13=VP_SYS_VS_tim1
+Mcu.Pin14=VP_TIM2_VS_ClockSourceINT
 Mcu.Pin2=PB10
 Mcu.Pin3=PB11
 Mcu.Pin4=PA9
@@ -63,7 +64,7 @@ Mcu.Pin6=PA11
 Mcu.Pin7=PA12
 Mcu.Pin8=PA13
 Mcu.Pin9=PA14
-Mcu.PinsNb=14
+Mcu.PinsNb=15
 Mcu.ThirdPartyNb=0
 Mcu.UserConstants=
 Mcu.UserName=STM32F103CBTx
@@ -73,6 +74,7 @@ NVIC.BusFault_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:false
 NVIC.DMA1_Channel4_IRQn=true\:5\:0\:false\:false\:true\:true\:false\:true
 NVIC.DMA1_Channel5_IRQn=true\:5\:0\:false\:false\:true\:true\:false\:true
 NVIC.DebugMonitor_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:false
+NVIC.EXTI15_10_IRQn=true\:5\:0\:false\:false\:true\:true\:true\:true
 NVIC.ForceEnableDMAVector=true
 NVIC.HardFault_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:false
 NVIC.MemoryManagement_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:false
@@ -99,6 +101,8 @@ PA13.Mode=Serial_Wire
 PA13.Signal=SYS_JTMS-SWDIO
 PA14.Mode=Serial_Wire
 PA14.Signal=SYS_JTCK-SWCLK
+PA15.Locked=true
+PA15.Signal=GPXTI15
 PA9.Mode=Asynchronous
 PA9.Signal=USART1_TX
 PB10.Mode=I2C
@@ -159,7 +163,9 @@ RCC.SYSCLKSource=RCC_SYSCLKSOURCE_PLLCLK
 RCC.TimSysFreq_Value=72000000
 RCC.USBFreq_Value=72000000
 RCC.VCOOutput2Freq_Value=8000000
-USART1.BaudRate=57600
+SH.GPXTI15.0=GPIO_EXTI15
+SH.GPXTI15.ConfNb=1
+USART1.BaudRate=115200
 USART1.IPParameters=VirtualMode,BaudRate
 USART1.VirtualMode=VM_ASYNC
 VP_CRC_VS_CRC.Mode=CRC_Activate
